sensord (0.6.29) unstable; urgency=low

  [Timo Rongas]
  * Added examples for writing new plugins.

  [Antti Virtanen]
  * Optimized SensorManager QMap usage by using iterators.
  * SensorManager::printStatus() segfaulted when sensorInstanceEntry had no users.
  * SocketHandler::clearInterval() fixed. It erased whole session entry
    instead of just setting the interval back to default.

 -- Timo Rongas <ext-timo.2.rongas@nokia.com>  Tue, 26 Oct 2010 09:12:58 +0300

sensord (0.6.28) unstable; urgency=low

  [Antti Virtanen]
  * Implemented interval downsampling. [Fixes: NB#196513].
  * SysfsAdaptorReader fetched incorrectly fd passed to processSample(). [Fixes: NB#180060].
  * Removed unnecessary mutex from SysfsAdaptorReader. SysfsAdaptor always first stops the poll thread before it modifies used file descriptors.

  [Timo Rongas]
  * Fixes: NB#190879 - Sample interval metadata is not fetched from hardware

 -- Antti Virtanen <antti.i.virtanen@nokia.com>  Wed, 20 Oct 2010 12:58:32 +0300

sensord (0.6.27) unstable; urgency=low

  [Antti Virtanen]
  * Debug output from USR2 is now printed with warning-level and output contains PID of active control and listen sessions if available. [Fixes: NB#197201].

  [Timo Rongas]
  * Reordered members to maintain binary compatibility.

 -- Timo Rongas <ext-timo.2.rongas@nokia.com>  Tue, 12 Oct 2010 16:18:11 +0300

sensord (0.6.26) unstable; urgency=low

  [Lihan Guo]
  * Added: Standby override test case	
  * Fixes: NB#193175 - Screen blank override is re-evaluated only at screen blank event

  [Pia Niemelä, Antti Virtanen]
  * Logging improved:
    - Log target can be configured with --log-target. Target is bitmask so multiple targets can be used at the same time. By default only syslog is used.
    - Log file path can be configured with --log-file-path.
    - SENSORD_USE_SYSLOG deprecated.
    - Log printing is now protected with mutex so output won't be messed up when used by multiple threads.
    - Small optimizations.
