@@ -44,8 +44,9 @@ class Orientation(unittest.TestCase):
     def setUp(self):
         self.fpath = "/tmp/fakedsensors/accelerometer"
         self.datafaker = "/usr/bin/datafaker"
-        self.context_client_edge = CLTool("context-listen", "Screen.TopEdge")
+        self.context_client_edge = CLTool("context-listen", "Screen.TopEdge", "Screen.IsFlat")
         self.context_client_cover = CLTool("context-listen", "Screen.IsCovered")
+        #~ self.context_client_flat = CLTool("context-listen", "Screen.IsFlat")
 
         # Get angle thresholds from config
         landscape_angle = int(os.popen("cat `ls /etc/sensorfw/sensord.conf.d/* /etc/sensorfw/sensord.conf` | grep orientation_threshold_landscape | head -n1 | cut -f2 -d=", "r").read())
@@ -65,22 +66,22 @@ class Orientation(unittest.TestCase):
             dataSet_top.append([0, int(1000*math.cos(math.radians(90-angle))), int(1000*math.cos(math.radians(angle)))])
         self.dataSet += dataSet_top
 
-        self.expectSet.append('')
+        self.expectSet.append('Screen.IsFlat = bool:true')
         self.expectSet.append('')
         self.expectSet.append('Screen.TopEdge = QString:"top"')
-        self.expectSet.append('Screen.TopEdge = Unknown')
-        self.expectSet.append('Screen.TopEdge = QString:"top"')
+        self.expectSet.append('Screen.IsFlat = bool:true')
+        self.expectSet.append('Screen.IsFlat = bool:false')
 
         # TopEdge = left (U, U, L, U, L)
         for angle in [0, portrait_angle-1, portrait_angle+1, portrait_angle-1, 90]:
             dataSet_left.append([-int(1000*math.cos(math.radians(90-angle))), 0, int(1000*math.cos(math.radians(angle)))])
         self.dataSet += dataSet_left
 
-        self.expectSet.append('Screen.TopEdge = Unknown')
+        self.expectSet.append('Screen.IsFlat = bool:true')
         self.expectSet.append('')
         self.expectSet.append('Screen.TopEdge = QString:"left"')
-        self.expectSet.append('Screen.TopEdge = Unknown')
-        self.expectSet.append('Screen.TopEdge = QString:"left"')
+        self.expectSet.append('Screen.IsFlat = bool:true')
+        self.expectSet.append('Screen.IsFlat = bool:false')
 
         # TopEdge = bottom, (U, U, B, U, B)
         for v in dataSet_top[:]:
@@ -88,11 +89,11 @@ class Orientation(unittest.TestCase):
             u[1] = -u[1]
             self.dataSet.append(u)
 
-        self.expectSet.append('Screen.TopEdge = Unknown')
+        self.expectSet.append('Screen.IsFlat = bool:true')
         self.expectSet.append('')
         self.expectSet.append('Screen.TopEdge = QString:"bottom"')
-        self.expectSet.append('Screen.TopEdge = Unknown')
-        self.expectSet.append('Screen.TopEdge = QString:"bottom"')
+        self.expectSet.append('Screen.IsFlat = bool:true')
+        self.expectSet.append('Screen.IsFlat = bool:false')
 
         # TopEdge = right (U, U, R, U, R)
         for v in dataSet_left[:]:
@@ -100,11 +101,11 @@ class Orientation(unittest.TestCase):
             u[0] = -u[0]
             self.dataSet.append(u)
 
-        self.expectSet.append('Screen.TopEdge = Unknown')
+        self.expectSet.append('Screen.IsFlat = bool:true')
         self.expectSet.append('')
         self.expectSet.append('Screen.TopEdge = QString:"right"')
-        self.expectSet.append('Screen.TopEdge = Unknown')
-        self.expectSet.append('Screen.TopEdge = QString:"right"')
+        self.expectSet.append('Screen.IsFlat = bool:true')
+        self.expectSet.append('Screen.IsFlat = bool:false')
 
         # TopEdge: left -> top -> left (should represent bottom and right well enough)
         for angle in [0, portrait_angle-1, portrait_angle+1, portrait_angle-1, 90]:
@@ -122,8 +123,8 @@ class Orientation(unittest.TestCase):
 
     def testOrientation(self):
 
-        # Set the starting position to unknown (0, 0, 1000)
-        os.system("echo 0 0 1000 | " + self.datafaker + " " + self.fpath)
+        # Set the starting position to bottom (0, -1000, 0)
+        os.system("echo 0 -1000 0 | " + self.datafaker + " " + self.fpath)
 
         index = 0
         for v in self.dataSet[:]:
@@ -132,6 +133,10 @@ class Orientation(unittest.TestCase):
                 os.system("echo " + str(v[0]) + " " + str(v[1]) + " " + str(v[2]) + " | " + self.datafaker + " " + self.fpath)
                 self.assert_(self.context_client_edge.expect(self.expectSet[index]))
             index += 1
+
+        # Set the starting position
+        os.system("echo 0 0 -1000 | " + self.datafaker + " " + self.fpath)
+        time.sleep(0.9)
 
         # On the table
         os.system("echo -36 -90 953 | " + self.datafaker + " " + self.fpath)
